[package]
name = "tokio-api-key-server"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[[bin]]
name = "keys"
path = "src/main.rs"

[dependencies]
rand = "0.6.5"
ureq = "0.10.0"